# content-digester

./: .gitignore  MODEL_ALIGN.md  README.md  pyproject.toml  setup.cfg
content_digester/: __init__.py
content_digester/adapters/: article.py  paper.py  repo.py  video.py
content_digester/core/: registry.py
content_digester/lib/: __init__.py  llm.py
content_digester/schemas/: __init__.py  intermediate.py
content_digester/scripts/: mcp_server.py  run.py
content_digester/writers/: auto_kb.py
tests/: test_adapters.py  test_auto_kb_writer.py  test_intermediate_schema.py  test_llm_client.py  test_registry.py
